test/corpus/attributes.txt
==================
emit attribute on a var
==================

#[emit]
var version: str = "1";

---

(source_file
  (var_decl
    (attribute
      (identifier))
    (identifier)
    (scalar_type)
    (string
      (string_content))))

==================
emit attribute on a section
==================

#[emit]
struct Server {
  port: int = 1;
};

---

(source_file
  (struct_decl
    (attribute
      (identifier))
    (identifier)
    (field_decl
      (identifier)
      (scalar_type)
      (integer_literal))))
