test/corpus/declarations.txt
================================================================================
Simple var declaration
================================================================================

var port: int = 3000;

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (scalar_type)
    value: (integer_literal)))

================================================================================
Exported var declaration
================================================================================

export var version: str = "1.0.0";

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (scalar_type)
    value: (string
      (string_content))))

================================================================================
Optional var with no value
================================================================================

var timeout: Option<int> = none();

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (named_type
      (identifier)
      (type_arguments
        (scalar_type)))
    value: (fn_call
      function: (identifier))))

================================================================================
Bool var
================================================================================

var debug: bool = false;

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (scalar_type)
    value: (boolean_literal)))

================================================================================
Heterogeneous list declaration
================================================================================

var tags: List<Any> = [2026, "prod", true];

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (named_type
      (identifier)
      (type_arguments
        (scalar_type)))
    value: (list_literal
      (integer_literal)
      (string
        (string_content))
      (boolean_literal))))

================================================================================
Optional list default
================================================================================

var labels: Option<List<str>> = none();

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (named_type
      (identifier)
      (type_arguments
        (named_type
          (identifier)
          (type_arguments
            (scalar_type)))))
    value: (fn_call
      function: (identifier))))

================================================================================
Import without alias
================================================================================

import "base.spar";

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (string
      (string_content))))

================================================================================
Import with alias
================================================================================

import "config/base.spar" as config;

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (string
      (string_content))
    alias: (identifier)))

================================================================================
Typed list var
================================================================================

var ports: List<int> = [3000, 8080];

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (named_type
      (identifier)
      (type_arguments
        (scalar_type)))
    value: (list_literal
      (integer_literal)
      (integer_literal))))

================================================================================
Float var
================================================================================

var ratio: float = 3.14;

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (scalar_type)
    value: (float_literal)))

================================================================================
String list var
================================================================================

var paths: List<str> = ["src/email", "src/out_mail"];

--------------------------------------------------------------------------------

(source_file
  (var_decl
    name: (identifier)
    type: (named_type
      (identifier)
      (type_arguments
        (scalar_type)))
    value: (list_literal
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Named whole and selective imports
================================================================================

import fastMath;
import pkg http/client as client;
import { add } from "./math.spar";

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (import_name
      (identifier)))
  (import_decl
    path: (import_name
      (identifier)
      (identifier))
    alias: (identifier))
  (import_decl
    (import_item
      (identifier))
    path: (string
      (string_content))))
