test/corpus/sections.txt
================================================================================
Struct with defaults
================================================================================
struct Server { port: int = 8080; };
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (scalar_type)
      (integer_literal))))

================================================================================
Exported struct
================================================================================
export struct Defaults { workers: int = 4; };
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (scalar_type)
      (integer_literal))))

================================================================================
Nested named field
================================================================================
struct Dependencies { version: str; }; struct Package { dependencies: Dependencies = Dependencies(version: "1.0"); };
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (scalar_type)))
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (named_type
        (identifier))
      (fn_call
        (identifier)
        (named_argument
          (identifier)
          (string
            (string_content)))))))

================================================================================
Explicit mutable variable
================================================================================
struct Server { port: int; }; var mut server: Server = Server(port: 9000);
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (scalar_type)))
  (var_decl
    (identifier)
    (named_type
      (identifier))
    (fn_call
      (identifier)
      (named_argument
        (identifier)
        (integer_literal)))))

================================================================================
Required Option field
================================================================================
struct Response { header: Option<str>; };
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (named_type
        (identifier)
        (type_arguments
          (scalar_type))))))

================================================================================
Default Option field
================================================================================
struct Response { header: Option<str> = none(); };
--------------------------------------------------------------------------------

(source_file
  (struct_decl
    (identifier)
    (field_decl
      (identifier)
      (named_type
        (identifier)
        (type_arguments
          (scalar_type)))
      (fn_call
        (identifier)))))
